Bug 18564 - SVGAnimateMotion does not handle accumulation
Summary: SVGAnimateMotion does not handle accumulation
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: 528+ (Nightly build)
Hardware: Mac OS X 10.5
: P2 Normal
Assignee: Nikolas Zimmermann
URL:
Keywords:
Depends on:
Blocks: 41761
  Show dependency treegraph
 
Reported: 2008-04-17 21:03 PDT by Antti Koivisto
Modified: 2012-04-28 01:21 PDT (History)
2 users (show)

See Also:


Attachments
testcase with <animateMotion> (487 bytes, image/svg+xml)
2010-10-20 15:55 PDT, Daniel Holbert
no flags Details
Patch (79.99 KB, patch)
2012-04-27 23:55 PDT, Nikolas Zimmermann
koivisto: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Koivisto 2008-04-17 21:03:36 PDT
Accumulate does not work with
- values animation
- colors (?)
- animateMotion
Comment 1 Daniel Holbert 2010-10-20 15:55:34 PDT
Created attachment 71351 [details]
testcase with <animateMotion>

Here's a simple testcase for <animateMotion>.
EXPECTED BEHAVIOR: The two circles move in lock-step for 5 seconds.
ACTUAL BEHAVIOR: The blue circle resets to its initial position every second.

My mozilla-central nightly build and Opera 10.63 both give EXPECTED BEHAVIOR.
Chromium* gives ACTUAL BEHAVIOR.  version = 8.0.551.0 (62128) Ubuntu 10.10
Comment 2 Dirk Schulze 2011-02-20 12:31:30 PST
(In reply to comment #1)
> Created an attachment (id=71351) [details]
> testcase with <animateMotion>
> 
> Here's a simple testcase for <animateMotion>.
> EXPECTED BEHAVIOR: The two circles move in lock-step for 5 seconds.
> ACTUAL BEHAVIOR: The blue circle resets to its initial position every second.
> 
> My mozilla-central nightly build and Opera 10.63 both give EXPECTED BEHAVIOR.
> Chromium* gives ACTUAL BEHAVIOR.  version = 8.0.551.0 (62128) Ubuntu 10.10

Yes, we don't support accumulation for animateTransform and animateMotion. Thanks for the test case!
Comment 3 Dirk Schulze 2011-07-04 01:58:25 PDT
accumulation works for animateElement, animateColor and animateTransform now. Renaming the bug title.
Comment 4 Nikolas Zimmermann 2012-04-27 23:55:10 PDT
Created attachment 139344 [details]
Patch
Comment 5 Antti Koivisto 2012-04-28 00:12:40 PDT
Comment on attachment 139344 [details]
Patch

r=me
Comment 6 Antti Koivisto 2012-04-28 00:13:16 PDT
Nice to see someone fixing my bugs.
Comment 7 Nikolas Zimmermann 2012-04-28 00:18:57 PDT
(In reply to comment #6)
> Nice to see someone fixing my bugs.
Just took us almost half a decade ;-) Thanks for the quick review!
Comment 8 Nikolas Zimmermann 2012-04-28 01:21:28 PDT
Committed r115554: <http://trac.webkit.org/changeset/115554>