SVGAnimateMotion does not handle accumulation https://bugs.webkit.org/show_bug.cgi?id=18564

Reviewed by Antti Koivisto.

Source/WebCore:

Implement accumulation for <animateMotion>. Add lots of new
reftests, verifying additive/accumulate behavior is correct.

Tests: svg/animations/animateMotion-additive-1-expected.svg
       svg/animations/animateMotion-additive-1.svg
       svg/animations/animateMotion-additive-2a-expected.svg
       svg/animations/animateMotion-additive-2a.svg
       svg/animations/animateMotion-additive-2b-expected.svg
       svg/animations/animateMotion-additive-2b.svg
       svg/animations/animateMotion-additive-2c-expected.svg
       svg/animations/animateMotion-additive-2c.svg
       svg/animations/animateMotion-additive-2d-expected.svg
       svg/animations/animateMotion-additive-2d.svg
       svg/animations/mozilla/animateMotion-by-1-expected.svg
       svg/animations/mozilla/animateMotion-by-1.svg
       svg/animations/mozilla/animateMotion-from-to-1-expected.svg
       svg/animations/mozilla/animateMotion-from-to-1.svg
       svg/animations/mozilla/animateMotion-indefinite-to-1-expected.svg
       svg/animations/mozilla/animateMotion-indefinite-to-1.svg
       svg/animations/mozilla/animateMotion-indefinite-to-2-expected.svg
       svg/animations/mozilla/animateMotion-indefinite-to-2.svg
       svg/animations/mozilla/animateMotion-mpath-pathLength-1-expected.svg
       svg/animations/mozilla/animateMotion-mpath-pathLength-1.svg
       svg/animations/mozilla/animateMotion-mpath-targetChange-1-expected.svg
       svg/animations/mozilla/animateMotion-mpath-targetChange-1.svg
       svg/animations/mozilla/animateMotion-to-overridden-1-expected.svg
       svg/animations/mozilla/animateMotion-to-overridden-1.svg

* svg/SVGAnimateMotionElement.cpp:
(WebCore::SVGAnimateMotionElement::SVGAnimateMotionElement):
(WebCore::SVGAnimateMotionElement::buildTransformForProgress):
(WebCore::SVGAnimateMotionElement::calculateAnimatedValue):
* svg/SVGAnimateMotionElement.h:

LayoutTests:

Import mozilla <animateMotion> reftests, and two testscases from
Dr. Olaf Hoffmanns SVG test suite, covering all additive/accumulate modes
for <animateMotion>.

* svg/animations/animateMotion-additive-1-expected.svg: Added.
* svg/animations/animateMotion-additive-1.svg: Added.
* svg/animations/animateMotion-additive-2a-expected.svg: Added.
* svg/animations/animateMotion-additive-2a.svg: Added.
* svg/animations/animateMotion-additive-2b-expected.svg: Added.
* svg/animations/animateMotion-additive-2b.svg: Added.
* svg/animations/animateMotion-additive-2c-expected.svg: Added.
* svg/animations/animateMotion-additive-2c.svg: Added.
* svg/animations/animateMotion-additive-2d-expected.svg: Added.
* svg/animations/animateMotion-additive-2d.svg: Added.
* svg/animations/mozilla/animateMotion-by-1-expected.svg: Added.
* svg/animations/mozilla/animateMotion-by-1.svg: Added.
* svg/animations/mozilla/animateMotion-from-to-1-expected.svg: Added.
* svg/animations/mozilla/animateMotion-from-to-1.svg: Added.
* svg/animations/mozilla/animateMotion-indefinite-to-1-expected.svg: Added.
* svg/animations/mozilla/animateMotion-indefinite-to-1.svg: Added.
* svg/animations/mozilla/animateMotion-indefinite-to-2-expected.svg: Added.
* svg/animations/mozilla/animateMotion-indefinite-to-2.svg: Added.
* svg/animations/mozilla/animateMotion-mpath-pathLength-1-expected.svg: Added.
* svg/animations/mozilla/animateMotion-mpath-pathLength-1.svg: Added.
* svg/animations/mozilla/animateMotion-mpath-targetChange-1-expected.svg: Added.
* svg/animations/mozilla/animateMotion-mpath-targetChange-1.svg: Added.
* svg/animations/mozilla/animateMotion-to-overridden-1-expected.svg: Added.
* svg/animations/mozilla/animateMotion-to-overridden-1.svg: Added.

Canonical link: https://commits.webkit.org/102675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115554 268f45cc-cd09-0410-ab3c-d52691b4dbfc